# secretenv

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  README_ja.md  SECURITY.md  install.sh
.claude/agents/: architecture-reviewer.md  security-reviewer.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
guides/: product_brief_en.md  product_brief_v3_en.md  product_brief_v3_ja.md  security_design_en.md  security_design_ja.md  security_design_v3_en.md  security_design_v3_ja.md  user_guide_en.md  user_guide_ja.md  wsl_user_guide_en.md  wsl_user_guide_ja.md
schemas/: secretenv_schema_v3.json
src/: app.rs  cli.rs  config.rs  crypto.rs  error.rs  feature.rs  format.rs  io.rs  lib.rs  main.rs  model.rs  support.rs
src/app/: config.rs  context.rs  errors.rs  file.rs  identity.rs  key.rs  kv.rs  member.rs  registration.rs  rewrap.rs  run.rs  verification.rs
src/cli/: common.rs  config.rs  decrypt.rs  encrypt.rs  error.rs  file_output.rs  get.rs  identity_prompt.rs  import.rs  init.rs  inspect.rs  join.rs  key.rs  list.rs  member.rs  registration.rs  rewrap.rs  run.rs  set.rs  unset.rs
src/config/: resolution.rs  types.rs
src/crypto/: aead.rs  error.rs  kdf.rs  kem.rs  sign.rs  types.rs
src/feature/: config.rs  context.rs  decrypt.rs  encrypt.rs  envelope.rs  init.rs  inspect.rs  key.rs  kv.rs  member.rs  rewrap.rs  run.rs  verify.rs
src/format/: content.rs  detection.rs  error.rs  file.rs  jcs.rs  kid.rs  kv.rs  schema.rs  token.rs
src/io/: config.rs  json.rs  keystore.rs  process.rs  schema.rs  ssh.rs  verify_online.rs  workspace.rs
src/model/: common.rs  file_enc.rs  identifiers.rs  kv_enc.rs  private_key.rs  public_key.rs  public_key_verified.rs  signature.rs  ssh.rs  verification.rs  verified.rs
src/support/: base64url.rs  fs.rs  json_limits.rs  kid.rs  limits.rs  path.rs  runtime.rs  time.rs  validation.rs
tests/: cli.rs  cli_integration.rs  keygen_helpers.rs  test_utils.rs  unit.rs
tests/cli/: common.rs  config.rs  decrypt.rs  encrypt.rs  env_key_mode.rs  init.rs  inspect.rs  join.rs  key.rs  kv.rs  member.rs  rewrap.rs  run.rs  verify.rs
tests/fixtures/: test_ed25519  test_ed25519.pub
tests/test_utils/: crypto_context.rs  ed25519_backend.rs  fixture.rs  fixture_generator.rs
tests/unit/: app_context_env_dispatch_test.rs  app_context_ssh_member_id_test.rs  (+130 more)
(+248 files in other folders)
