[package]
name = "secretenv"
version = "0.1.1-alpha"
edition = "2021"
authors = ["Satoshi Ebisawa <ebisawa@gmail.com>"]
description = "Serverless CLI for secure secret sharing with HPKE encryption"
license = "Apache-2.0"
autotests = false

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"

# JSON Schema validation
jsonschema = "0.45"

# Encoding
base64 = "0.22"
hex = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# ULID generation (for kid - key ID)
ulid = "1"

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Random number generation
rand = "0.8"

# Cryptography - HPKE (RFC9180)
hpke = "0.12"

# Cryptography - XChaCha20-Poly1305 (v2.0-alpha)
chacha20poly1305 = "0.10"

# Cryptography - Key derivation
hkdf = "0.12"
sha2 = "0.10"

# Cryptography - X25519 key exchange
x25519-dalek = "2"

# Cryptography - Ed25519 signatures
ed25519-dalek = { version = "2", features = ["rand_core"] }

# SSH agent client (for SA-SIG-KDF v1)
ssh-agent-client-rs = "1.1"
ssh-key = { version = "0.6", features = ["ed25519"] }

# Secure memory handling
zeroize = { version = "1", features = ["zeroize_derive"] }

# .env file parsing
dotenvy = "0.15"

# TOML parsing (for config.toml)
toml = "1.0"
shellexpand = "3"

# Temporary file handling
tempfile = "3"

# File locking
fd-lock = "4.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Regular expressions
regex = "1"

# HTTP client (for online verification)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

[dev-dependencies]
# CLI testing
assert_cmd = "2"
predicates = "3"

# Serial test execution
serial_test = "3"

# Environment variable manipulation for tests
temp-env = "0.3"

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"

[[test]]
name = "unit"
path = "tests/unit.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
